# dao

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Earthfile  Taskfile.yaml  conanfile.py  devbox.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yaml
apps/: README.md
apps/daoc/: CMakeLists.txt  main.cpp
cmake/: llvm.cmake
examples/: double.dao  fibonacci.dao  hello_world.dao  if_else.dao  triple.dao
include/shared/: fixtures.hpp
profiles/: clang.ini  linux.clang.ini  linux.gcc.ini  ubuntu-22.04.clang.debug.ini  ubuntu-22.04.gcc.debug.ini
